fix some cotnent, layout bugs, centering

--- a/public/themes/classic.css
+++ b/public/themes/classic.css
@@ -174,18 +174,22 @@ r4-layout::part(menu) {
 	position: sticky;
 	bottom: 0;
 	overflow-x: auto;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 r4-layout::part(panel) {
 	background-color: var(--c-bg);
 	/* z-index: 1; */
 }
+r4-layout::part(menu) {
+	z-index: 1;
+}
 r4-layout [slot='main'] {
 	z-index: 1;
 }
 r4-layout header[slot='menu'] {
-	z-index: 1;
-	justify-content: flex-start;
-	width: 100%;
+	overflow-x: auto;
 }
 
 r4-layout::part(playback-summary) {
@@ -197,7 +201,7 @@ r4-page-header {
 	top: 0;
 	z-index: 1;
 	background-color: var(--c-bg);
-	width: 100%;
+	align-self: center;
 }
 r4-page-main {
 	flex-grow: 1;
@@ -257,6 +261,7 @@ r4-app-menu {
 
 r4-app-menu,
 r4-app-user-menu {
+	/* width: 100%; */
 	& menu {
 		background-color: var(--c-bg);
 		flex-wrap: nowrap;
@@ -269,10 +274,7 @@ r4-app-user-menu {
 r4-app menu {
 	border: 1px solid var(--c-border);
 	border-radius: var(--s-radius);
-	/* justify-content: center; */
-}
-r4-app li:has(r4-query) {
-	margin-left: auto;
+	justify-content: center;
 }
 r4-app menu a {
 	white-space: nowrap;
@@ -305,6 +307,9 @@ r4-channel-card-body r4-channel-slug {
 	word-break: break-word;
 }
 
+r4-channel-delete {
+	text-align: center;
+}
 /* Channel cards */
 r4-channel-card {
 	background-color: var(--c-bg2);
@@ -574,7 +579,7 @@ r4-page-channel {
 			width: 100%;
 			justify-content: center;
 			padding: var(--s);
-			order: 3;
+			order: 0;
 			& button::after {
 				display: inline;
 				content: 'Play';
